--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: ParetoR
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Estimates Pareto-Optimal solution for diversity hiring.
 Version: 0.1.0
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: More about what it does (maybe more than one line)
+Authors@R: person("QChelsea", "Song", email = "qianqisong@gmail.com", role = c("aut", "cre"))
+Description: Estimates Pareto-Optimal solution for diversity hiring.
 License: What license is it under?
 LazyData: TRUE
 RoxygenNote: 5.0.1
