--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: ParetoR
 Type: Package
 Title: Estimates Pareto-Optimal solution for diversity hiring.
 Version: 0.1.0
-Authors@R: person("QChelsea", "Song", email = "qianqisong@gmail.com", role = c("aut", "cre"))
+Authors@R: person("Temporarily removed", "for blind review", email = "Temporarily_removed_for_blind_review@example.com", role = c("aut", "cre"))
 Description: Estimates Pareto-Optimal solution for diversity hiring.
 License: What license is it under?
 LazyData: TRUE
